cluster/eu-de-01/udl/api/api.deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: udl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/udl-tf/united-api
        imagePullPolicy: Always
        ports:
        - containerPort: 5823
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: demo-volume
          mountPath: /tf/udl/tf/demos
      volumes:
      - name: demo-volume
        hostPath:
          path: /tf/udl/tf/demos
          type: Directory
