cluster/eu-de-01/udl/api/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: udl
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
