cluster/eu-de-01/udl/api/api.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: udl
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`api.udl.tf`)
      kind: Rule
      services:
        - name: api
          port: 5823
  tls:
    secretName: api-tls
